change in background and add new pages ,change css and add footer

--- a/29 june/Portfolio/style.css
+++ b/29 june/Portfolio/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -11,6 +11,7 @@
     background-size: cover;
     height: 100vh;
     position: relative;
+    font-family: 'Poppins',sans-serif;
 }
 
 .navbar{
@@ -45,7 +46,7 @@ ul li{
 ul li a{
     font-size: 16px;
     font-weight: bold;
-    font-family: 'Bungee;',sans-serif;
+    font-family: 'Poppins',sans-serif;
     text-decoration: none;
     color: #59D5E0;
     margin-top: -3%;
